# triggergraphs

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml
docs/: MakeFile  api.rst  conf.py  examples.rst  getting_started.rst  index.rst  requirements.txt  user_guide.rst
include/glog-python/: edblayer.h  program.h  pyedbiterator.h  pyedbtable.h  tg.h  tupleset.h  wizard.h
include/triggergraphs/: edblayer.h  program.h  querier.h  reasoner.h
src/cplusplus/: edblayer.cpp  glog.cpp  program.cpp  pyedbiterator.cpp  pyedbtable.cpp  querier.cpp  reasoner.cpp  tg.cpp  tupleset.cpp  wizard.cpp
src/triggergraphs/: __init__.py
tests/: test_edb.py  test_program.py  test_querier.py  test_reasoner.py  test_tg.py  test_tupleset.py  test_wizard.py
tests/data1/: program.dlog
