[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "triggergraphs"
version = "0.0.1"
description = "Datalog engine using trigger graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]
authors = [
    { name = "Jacopo Urbani" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# cmake.build-type = "Debug"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

wheel.packages = ["src/triggergraphs"]

# Include CMakeLists.txt in source distribution
sdist.include = ["CMakeLists.txt"]

#[tool.cibuildwheel]
## Necessary to see build output from the actual compilation
#build-verbosity = 1
#
## Run pytest to ensure that the package was correctly built
#test-command = "pytest {project}/tests"
#test-requires = "pytest"
#
# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"
